# AI-Software-Architecture

./: .gitignore  Makefile  README.md  dev.md  pyproject.toml
.github/workflows/: ci.yml  production-deploy.yml  staging-deploy.yml
docuquery/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  streamlit_app.py  streamlit_infra.py
docuquery/.github/workflows/: ci.yml
docuquery/config/: __init__.py  settings.py
docuquery/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docuquery/frontend/: index.html  package-lock.json  package.json
docuquery/frontend/src/: App-Stage4.jsx  App-Stage5.jsx  App.jsx  index-stage4.css  index-stage5.css  index.css  main.jsx
docuquery/helm/docuquery/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
docuquery/helm/docuquery/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secrets.yaml  service.yaml  servicemonitor.yaml
docuquery/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  rbac.yaml  secrets.yaml  service.yaml
docuquery/k8s/blue-green/: deployments.yaml  services.yaml  switch.sh
docuquery/k8s/overlays/production/: kustomization.yaml  namespace.yaml  network-policy-production.yaml  priority-class.yaml
docuquery/k8s/overlays/staging/: kustomization.yaml
docuquery/logging/fluentbit/: fluent-bit.conf  parsers.conf
docuquery/logging/loki/: loki-config.yaml
docuquery/logging/promtail/: promtail-config.yaml
docuquery/monitoring/grafana/dashboards/: docuquery-api.json  system.json
docuquery/monitoring/grafana/provisioning/dashboards/: dashboards.yaml
docuquery/monitoring/grafana/provisioning/datasources/: datasources.yaml
docuquery/monitoring/prometheus/: alerts-production.yml  alerts.yml  prometheus.yml
docuquery/scripts/: __init__.py  seed_documents.py
docuquery/src/: __init__.py
docuquery/src/api/: main.py
docuquery/src/api/middleware/: __init__.py  error_handler.py  logging.py
docuquery/src/api/routes/: __init__.py  documents.py  health.py  query.py
docuquery/src/core/: __init__.py  exceptions.py  orchestrator.py  query_engine.py
docuquery/src/ingestion/: __init__.py  chunker.py  loader.py  processor.py
docuquery/src/llm/: __init__.py  gateway.py
docuquery/src/llm/providers/: __init__.py  anthropic.py  base.py  openai.py
docuquery/src/models/: __init__.py  common.py  documents.py  queries.py
docuquery/src/prompts/: __init__.py  manager.py
docuquery/src/prompts/templates/v1/: query.txt  system.txt
docuquery/src/retrieval/: __init__.py  embeddings.py  vector_store.py
docuquery/src/utils/: logging.py
docuquery/tests/: conftest.py
docuquery/tests/e2e/: __init__.py  test_e2e.py
docuquery/tests/integration/: test_api.py  test_documents.py  test_health.py  test_query.py
docuquery/tests/security/: __init__.py  test_security.py
docuquery/tests/unit/: test_chunker.py  test_embeddings.py  test_llm_gateway.py  test_loader.py  test_models.py  test_orchestrator.py  test_prompt_manager.py  test_query_engine.py  test_settings.py  test_vector_store.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
poc/: .env.example  README.md  app.py  app_simple.py  requirements.txt
poc/documents/: company_policy.md  faq.md  product_guide.md
